Change button to link for system scan

--- a/index.html
+++ b/index.html
@@ -417,7 +417,16 @@
                 <p> Wondering what is hiding in the depths of your files? just use Crab productions FREE System scan to SEE just that! (Totally not a Virus)  </p>
                 
                 <p><strong>Price:Free!!!</strong>  </p>
-                <button onclick="window.location.href='thecrabspilot.github.io/TOTALLYNOTAVIRUS/'">Use now!</button>
+                <button> <a href="https://thecrabspilot.github.io/TOTALLYNOTAVIRUS/"
+   style="
+          color: white; 
+          text-decoration: none; 
+          ">
+  Use now!
+</a>
+
+
+</button>
 
             </div>
 
