Update footer text for content description

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 
     <footer>
         <p>©2025 Crab Productions™️ | All Rights Reserved. Except for the rights we forgot about. And the ones we lost in a game of Go Fish. We're not lawyers, don't sue us.</p>
-        <p>Check out our source of all that stupidly relatable content: <a href="https://www.youtube.com/@THECRABSPILOT" target="_blank">YouTube: @THECRABSPILOT</a></p>
+        <p>Check out our source of all this stupid content: <a href="https://www.youtube.com/@THECRABSPILOT" target="_blank">YouTube: @THECRABSPILOT</a></p>
     </footer>
 
     <script>
